--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -1,5 +1,4 @@
 require:
-  - rubocop-minitest
   - rubocop-performance
   - rubocop-rails
 
@@ -7,11 +6,9 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   TargetRubyVersion: <%= RUBY_VERSION[/\d+\.\d+/] %>
+  NewCops: enable
   Exclude:
     - "bin/*"
-    - Capfile
-    - config/boot.rb
-    - config/environment.rb
     - config/initializers/version.rb
     - db/schema.rb
     - "node_modules/**/*"
@@ -22,75 +19,41 @@ AllCops:
     - Guardfile
     - Rakefile
 
-Layout/HashAlignment:
-  EnforcedColonStyle:
-    - table
-    - key
-  EnforcedHashRocketStyle:
-    - table
-    - key
-
 Layout/LineLength:
-  Exclude:
-    - "config/**/*"
-    - "db/**/*"
+  Max: 120
 
-Layout/SpaceAroundEqualsInParameterDefault:
-  EnforcedStyle: no_space
-
-Metrics/AbcSize:
-  Max: 20
+Lint/AmbiguousBlockAssociation:
   Exclude:
     - "test/**/*"
 
+Metrics/ModuleLength:
+  Exclude:
 Metrics/BlockLength:
   Exclude:
-    - "config/**/*"
+    - config/environments/*.rb
     - "test/**/*"
-
-Metrics/ClassLength:
-  Exclude:
-    - "test/**/*"
-
 Metrics/MethodLength:
-  Max: 18
-  Exclude:
-    - "db/migrate/*"
-    - "test/**/*"
+  Max: 25
+Metrics/AbcSize:
+  Max: 25
 
-Naming/MemoizedInstanceVariableName:
-  EnforcedStyleForLeadingUnderscores: optional
-
-Naming/VariableNumber:
-  Enabled: false
-
-Performance/Casecmp:
-  Enabled: false
-
-Rails/ApplicationRecord:
+Naming/FileName:
   Exclude:
     - "db/migrate/**"
 
-Rails/RakeEnvironment:
-  Enabled: false
-
-Rails/RefuteMethods:
-  Enabled: false
-
-Rails/Validation:
-  Enabled: false
-
-Style/BarePercentLiterals:
-  EnforcedStyle: percent_q
-
-Style/ClassAndModuleChildren:
-  Enabled: false
-
 Style/Documentation:
   Enabled: false
+Style/FrozenStringLiteralComment:
+  EnforcedStyle: never
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
 
-Style/DoubleNegation:
-  Enabled: false
+Rails/UnknownEnv:
+  Environments:
+    - production
+    - staging
+    - development
+    - test
 
 Style/EmptyMethod:
   Enabled: false
@@ -100,21 +63,4 @@ Style/FrozenStringLiteralComment:
 
 Style/HashEachMethods:
   Enabled: true
-
-Style/HashSyntax:
-  EnforcedStyle: ruby19
-
-Style/HashTransformKeys:
-  Enabled: true
-
-Style/HashTransformValues:
-  Enabled: true
-
-Style/NumericPredicate:
   Enabled: false
-
-Style/StringLiterals:
-  EnforcedStyle: double_quotes
-
-Style/TrivialAccessors:
-  AllowPredicates: true
