--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,71 +1,90 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "<%= RUBY_VERSION %>"
+ruby "~> <%= RUBY_VERSION[/\d+\.\d+/] %>"
 
-gem "active_type", ">= 0.3.2"
-gem "autoprefixer-rails", ">= 5.0.0.1"
-gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
-gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
-gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
-gem "dotenv-rails", ">= 2.0.0"
-gem "pg"<%= gemfile_requirement("pg") %>
-gem "pgcli-rails"
-gem "puma", "~> 4.1"
-gem "rack-canonical-host", "~> 0.2.3"
+# ====================================== #
+# DEFAULT BASE GEMS FROM A NEW RAILS APP #
+# ====================================== #
+# Bundle edge Rails instead: gem "rails", github: "rails/rails"
 gem "rails", "~> <%= Rails.version %>"
-gem "redis"<%= gemfile_requirement("redis") %>
-gem "sass-rails", "~> 6.0"
-gem "sidekiq", ">= 4.2.0"
-<% if gemfile_requirement("turbolinks") -%>
-gem "turbolinks"<%= gemfile_requirement("turbolinks") %>
-<% end -%>
-gem "webpacker"<%= gemfile_requirement("webpacker") %>
+# Use postgresql as the database for Active Record
+gem "pg" <%= gemfile_requirement("pg") %>
+# Use Puma as the app server
+gem "puma" <%= gemfile_requirement("puma") %>
+# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
+# gem "jbuilder" <%= gemfile_requirement("jbuilder") %>
+# Use Redis adapter to run Action Cable in production
+# gem "redis" <%= gemfile_requirement("redis") %>
+# Use Active Model has_secure_password
+# gem "bcrypt" <%= gemfile_requirement("bcrypt") %>
 
-group :production do
-  gem "postmark-rails"
-end
+# Use Active Storage variant
+# gem "image_processing" <%= gemfile_requirement("image_processing") %>
+
+# Reduces boot times through caching; required in config/boot.rb
+gem "bootsnap" <%= gemfile_requirement("bootsnap") %>, require: false
+
+# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
+# gem "rack-cors" <%= gemfile_requirement("rack-cors") %>
 
 group :development, :test do
-  gem "byebug"
+  # Call "byebug" anywhere in the code to stop execution and get a debugger console
+  gem "byebug", platforms: [:mri, :mingw, :x64_mingw]
 end
 
 group :development do
-  gem "amazing_print"
-  gem "annotate", ">= 2.5.0"
-  gem "better_errors"
-  gem "binding_of_caller"
-  gem "brakeman", require: false
-  gem "bundler-audit", ">= 0.5.0", require: false
-  gem "guard", ">= 2.2.2", require: false
-  gem "guard-livereload", require: false
-  gem "guard-minitest", require: false
-  gem "letter_opener"
-  gem "listen"<%= gemfile_requirement("listen") %>
-  gem "overcommit", ">= 0.37.0", require: false
-  gem "rack-livereload"
-  gem "rubocop", ">= 0.80.0", require: false
-  gem "rubocop-minitest", require: false
-  gem "rubocop-performance", require: false
-  gem "rubocop-rails", require: false
+  gem "listen" <%= gemfile_requirement("listen") %>
+  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem "spring"
 <% if gemfile_requirement("spring-watcher-listen") -%>
   gem "spring-watcher-listen"<%= gemfile_requirement("spring-watcher-listen") %>
 <% end -%>
-  gem "terminal-notifier", require: false
-  gem "terminal-notifier-guard", require: false
-<% unless gemfile_requirement("puma") -%>
-  gem "thin", require: false
-<% end -%>
+end
+
+# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
+gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+# ================================ #
+# EXTRA GEMS ADDED TO THIS PROJECT #
+# ================================ #
+gem "discard", "~> 1.2" # Soft deletes for ActiveRecord done right
+gem "dotenv-rails" # A Ruby gem to load environment variables from `.env`.
+gem "redis" <%= gemfile_requirement("redis") %> # A Ruby client library for Redis
+
+gem "sidekiq" # Simple, efficient background processing for Ruby
+gem "sidekiq-failures" # Keep track of Sidekiq failed jobs
+gem "sidekiq-scheduler" # Lightweight job scheduler extension for Sidekiq
+gem "sidekiq-unique-jobs", "~> 7.0.0.beta15" # Ensure uniqueness of your Sidekiq jobs
+
+group :development, :test do
+  gem "debase", "~> 0.2"
+  gem "ruby-debug-ide" # An interface which glues ruby-debug to IDEs
+
+  gem "bullet" # Help to kill N+1 queries and unused eager loading.
+  gem "letter_opener" # Preview mail in the browser instead of sending.
+  gem "factory_bot_rails" # Factory Bot loves Rails
+  gem "faker" # A library for generating fake data such as names, addresses, and phone numbers.
+  gem "rspec-rails", "~> 4.0.0"
+end
+
+group :development do
+  gem "annotate" # Annotate Rails classes with schema and routes info
+
+  # A Ruby static code analyzer and formatter, based on the community Ruby style guide.
+  gem "rubocop", require: false
+  gem "rubocop-performance", require: false
+  gem "rubocop-rails", require: false
+  gem "rubocop-rspec", require: false
 end
 
 group :test do
-  gem "capybara"<%= gemfile_requirement("capybara") %>
-  gem "launchy"
-  gem "minitest-ci", ">= 3.3.0", require: false
-  gem "mock_redis"
-  gem "selenium-webdriver"
-  gem "shoulda-context"
-  gem "shoulda-matchers", ">= 3.0.1"
-  gem "webdrivers"
+  gem "fuubar" # The instafailing RSpec progress bar formatter.
+  gem "rspec-sidekiq" # RSpec for Sidekiq
+  gem "shoulda-matchers" # Simple one-liner tests for common Rails functionality
+  gem "timecop" # A gem providing "time travel", "time freezing", and "time acceleration" capabilities
+
+  gem "codecov", require: false
+  gem "simplecov", require: false # Code coverage for Ruby 1.9+
 end
+
