Add rswag and api-pagination gem

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -52,6 +52,12 @@ gem "discard", "~> 1.2" # Soft deletes for ActiveRecord done right
 gem "dotenv-rails" # A Ruby gem to load environment variables from `.env`.
 gem "redis" <%= gemfile_requirement("redis") %> # A Ruby client library for Redis
 
+gem "rswag-api" # Seamlessly adds a Swagger to Rails-based API's.
+gem "rswag-ui"
+
+gem "kaminari" # A Scope & Engine based, clean, powerful, customizable and sophisticated paginator for Ruby webapps
+gem "api-pagination" # Link header pagination for Rails and Grape APIs.
+
 gem "sidekiq" # Simple, efficient background processing for Ruby
 gem "sidekiq-failures" # Keep track of Sidekiq failed jobs
 gem "sidekiq-scheduler" # Lightweight job scheduler extension for Sidekiq
@@ -66,6 +72,7 @@ group :development, :test do
   gem "factory_bot_rails" # Factory Bot loves Rails
   gem "faker" # A library for generating fake data such as names, addresses, and phone numbers.
   gem "rspec-rails", "~> 4.0.0"
+  gem "rswag-specs"
 end
 
 group :development do
