--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "~> <%= RUBY_VERSION[/\d+\.\d+/] %>"
+ruby ENV["CUSTOM_RUBY_VERSION"] || "<%= RUBY_VERSION %>"
 
 # ====================================== #
 # DEFAULT BASE GEMS FROM A NEW RAILS APP #
