--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -1,5 +1,4 @@
 require:
-  - rubocop-minitest
   - rubocop-performance
   - rubocop-rails
 
@@ -7,114 +6,56 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   TargetRubyVersion: <%= RUBY_VERSION[/\d+\.\d+/] %>
+  NewCops: enable
   Exclude:
-    - "bin/*"
-    - Capfile
-    - config/boot.rb
-    - config/environment.rb
-    - config/initializers/version.rb
-    - db/schema.rb
-    - "node_modules/**/*"
-    - "bower_components/**/*"
-    - "tmp/**/*"
-    - "vendor/**/*"
     - Gemfile
     - Guardfile
     - Rakefile
-
-Layout/HashAlignment:
-  EnforcedColonStyle:
-    - table
-    - key
-  EnforcedHashRocketStyle:
-    - table
-    - key
+    - bin/*
+    - bower_components/**/*
+    - config/initializers/version.rb
+    - db/schema.rb
+    - node_modules/**/*
+    - tmp/**/*
+    - vendor/**/*
 
 Layout/LineLength:
+  Max: 120
+
+Lint/AmbiguousBlockAssociation:
   Exclude:
-    - "config/**/*"
-    - "db/**/*"
-
-Layout/SpaceAroundEqualsInParameterDefault:
-  EnforcedStyle: no_space
-
-Metrics/AbcSize:
-  Max: 20
+    - spec/**/*
+Lint/MissingSuper:
   Exclude:
-    - "test/**/*"
+    - app/services/**/*
 
+Metrics/ModuleLength:
+  Exclude:
+    - spec/**/*
 Metrics/BlockLength:
   Exclude:
-    - "config/**/*"
-    - "test/**/*"
-
-Metrics/ClassLength:
-  Exclude:
-    - "test/**/*"
-
+    - config/environments/*.rb
+    - db/migrate/*.rb
+    - spec/**/*
 Metrics/MethodLength:
-  Max: 18
+  Max: 25
   Exclude:
-    - "db/migrate/*"
-    - "test/**/*"
-
-Naming/MemoizedInstanceVariableName:
-  EnforcedStyleForLeadingUnderscores: optional
-
-Naming/VariableNumber:
-  Enabled: false
-
-Performance/Casecmp:
-  Enabled: false
-
-Rails/ApplicationRecord:
+    - db/migrate/*.rb
+Metrics/AbcSize:
+  Max: 25
   Exclude:
-    - "db/migrate/**"
-
-Rails/RakeEnvironment:
-  Enabled: false
-
-Rails/RefuteMethods:
-  Enabled: false
-
-Rails/Validation:
-  Enabled: false
-
-Style/BarePercentLiterals:
-  EnforcedStyle: percent_q
-
-Style/ClassAndModuleChildren:
-  Enabled: false
+    - db/migrate/*.rb
 
 Style/Documentation:
   Enabled: false
-
-Style/DoubleNegation:
-  Enabled: false
-
-Style/EmptyMethod:
-  Enabled: false
-
 Style/FrozenStringLiteralComment:
-  Enabled: false
-
-Style/HashEachMethods:
-  Enabled: true
-
-Style/HashSyntax:
-  EnforcedStyle: ruby19
-
-Style/HashTransformKeys:
-  Enabled: true
-
-Style/HashTransformValues:
-  Enabled: true
-
-Style/NumericPredicate:
-  Enabled: false
-
+  EnforcedStyle: never
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
-Style/TrivialAccessors:
-  AllowPredicates: true
+Rails/UnknownEnv:
+  Environments:
+    - development
+    - production
+    - staging
+    - test
