--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -26,7 +26,7 @@ gem "redis" <%= gemfile_requirement("redis") %>
 gem "bootsnap" <%= gemfile_requirement("bootsnap") %>, require: false
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-# gem "rack-cors" <%= gemfile_requirement("rack-cors") %>
+gem "rack-cors" <%= gemfile_requirement("rack-cors") %>
 
 group :development, :test do
   # Call "byebug" anywhere in the code to stop execution and get a debugger console
