--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -1,6 +1,7 @@
 require:
   - rubocop-performance
   - rubocop-rails
+  - rubocop-rspec
 
 AllCops:
   DisplayCopNames: true
@@ -59,3 +60,23 @@ Rails/UnknownEnv:
     - production
     - staging
     - test
+
+RSpec:
+  Include:
+    - '(?:^|/)spec/(?!integration)'
+RSpec/ContextWording:
+  Prefixes:
+    - for
+    - when
+    - with
+    - without
+RSpec/ExampleLength:
+  Max: 25
+RSpec/MultipleExpectations:
+  Max: 20
+RSpec/NamedSubject:
+  Enabled: false
+RSpec/NestedGroups:
+  Max: 5
+RSpec/VerifiedDoubles:
+  Enabled: false
