--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -56,6 +56,7 @@ gem "dotenv-rails" # A Ruby gem to load environment variables from `.env`.
 gem "foreman" # Manage Procfile-based applications.
 
 group :development, :test do
+  gem "bullet" # Help to kill N+1 queries and unused eager loading.
   gem "factory_bot_rails" # Factory Bot loves Rails
   gem "faker" # A library for generating fake data such as names, addresses, and phone numbers.
   gem "rspec-rails", "~> 4.0.0"
