Add "annotate" gem

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -63,6 +63,8 @@ group :development, :test do
 end
 
 group :development do
+  gem "annotate" # Annotate Rails classes with schema and routes info
+
   # A Ruby static code analyzer and formatter, based on the community Ruby style guide.
   gem "rubocop", require: false
   gem "rubocop-performance", require: false
