--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -16,6 +16,7 @@ AllCops:
     - bower_components/**/*
     - config/initializers/version.rb
     - db/schema.rb
+    - lib/tasks/auto_annotate_models.rake
     - node_modules/**/*
     - tmp/**/*
     - vendor/**/*
